styles.css
/* ... */
.gallery-column img {
    margin-top: 0.5rem;
    vertical-align: middle;
    width: 100%;
}


.portfolio {
    max-width: 50rem;
    height: auto;
}

.gallery-item {
    background-color: white;
    margin: 0;
    margin-top: 1rem;
    padding: 1rem;

    .figure {
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: space-between;

        img {
            object-fit: contain;
        }
    }

}

.gallery img {
    inline-size: 100%;
    block-size: 100%;
    object-fit: cover;
}

.gif-frames-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1rem;
}

.gif-frames {
    display: flex;
    flex-direction: column;
    gap: 0.3rem;

    img {
        height: 8rem;
        width: auto;
    }
}


/* From Uiverse.io by wilsondesouza */
ul {
    list-style: none;
}

.socials {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-left: 0;
}

.socials .icon-content {
    margin: 0 0.6rem;
    position: relative;
}

.socials .icon-content .tooltip {
    position: absolute;
    top: -30px;
    left: 50%;
    transform: translateX(-50%);
    color: white;
    padding: 6px 10px;
    border-radius: 5px;
    opacity: 0;
    visibility: hidden;
    font-size: 14px;
    font-family: "Marcellus";
    transition: all 0.3s ease;
}

.socials .icon-content:hover .tooltip {
    opacity: 1;
    visibility: visible;
    top: -40px;
}

.socials .icon-content a {
    position: relative;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    color: #4d4d4d;
    background-color: var(--darkpurple);
    transition: all 0.3s ease-in-out;
}

.socials .icon-content a:hover {
    box-shadow: 3px 2px 45px 0px rgb(0 0 0 / 12%);
}

.socials .icon-content a img {
    position: relative;
    z-index: 1;
}

.socials .icon-content a svg {
    position: relative;
    z-index: 1;
    width: 30px;
    height: 30px;
}

.socials .icon-content a:hover {
    color: white;
}

.socials .icon-content a .filled {
    position: absolute;
    top: auto;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 0;
    background-color: #000;
    transition: all 0.3s ease-in-out;
}

.socials .icon-content a:hover .filled {
    height: 100%;
}

.socials .icon-content a[data-social="TikTok"] .filled,
.socials .icon-content a[data-social="TikTok"]~.tooltip {
    background-color: #24262a;
}

.socials .icon-content a[data-social="Artfight"] .filled,
.socials .icon-content a[data-social="Artfight"]~.tooltip {
    background-color: #5ac8e9;
}

.socials .icon-content a[data-social="Tumblr"] .filled,
.socials .icon-content a[data-social="Tumblr"]~.tooltip {
    background-color: #1c3561;
}

.socials .icon-content a[data-social="Artfol"] .filled,
.socials .icon-content a[data-social="Artfol"]~.tooltip {
    background: linear-gradient(#ff9ca5,
            #ec7480);
}

.socials .icon-content a[data-social="Kofi"] .filled,
.socials .icon-content a[data-social="Kofi"]~.tooltip {
    background-color: #ff5a16;
}

.about-group {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    margin-bottom: 3rem;
}

.card-group {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 2rem;
    padding-left: 1rem;
    padding-right: 1rem;


    .about {
        display: grid;
        grid-template-areas:
            "left-top      right"
            "left-bottom   right";

        grid-template-rows: min-content 1fr;
        gap: 1.5rem;

        .right {
            grid-area: right;
        }

        .left-top {
            grid-area: left-top;
        }


        .left-bottom {
            grid-area: left-bottom;
        }
    }

}

.ocs-card-group {
    margin-bottom: 4rem;
}


.card {
    --card-bg-color-1: var(--darkpurple);
    --card-bg-color-2: var(--lightpurple);
    /* width: 450px; */
    /* height: 174px; */
    border-radius: 1rem;
    /* background-color: var(--darkpurple); */
    /* background-image:linear-gradient(43deg,var(--lightpurple) 0%, var(--darkpurple) 63%, var(--darkpurple) 100%); */
    background-color: var(--card-bg-color-1);
    background-image: linear-gradient(43deg, var(--card-bg-color-2) 0%, var(--card-bg-color-1) 63%, var(--card-bg-color-1) 100%);
    border: 2px solid white;
    /* margin: 50px; */
    margin-bottom: 3rem;
    padding: 2rem;
    position: relative;
    min-height: 7rem;
    max-width: 25rem;
    z-index: 0;

    button {
        --width-perc: 30%;
        position: absolute;
        bottom: -1.5rem;
        width: var(--width-perc);
        left: calc(50% - var(--width-perc)/2);

        /* border-color: white; */
    }
}

.card-title {
    font-family: "TT Hoves";
    font-weight: 600;
    font-size: 1.25rem;
    letter-spacing: 0.15em;
    color: white;
    text-align: center;
    padding: 1rem;
}

.card-paragraph {
    font-family: "Marcellus";
    color: white;
    font-size: 1rem;
    /* margin-left: 37px;
    margin-right: 37px;
    margin-bottom: 0px; */
    text-align: justify;
}

.closed:after {
    width: 6rem;
    height: 6rem;
    position: absolute;
    z-index: 1;
    background-image: url('Other/ClosedSign.png');
    background-size: 6rem 6rem;
    content: '';
    /* content-visibility: hidden; */
    left: 0.5rem;
    top: -1.5rem;

}

.wip:after {
    width: 6rem;
    height: 6rem;
    position: absolute;
    z-index: 1;
    background-image: url('Other/WorkInProgress.png');
    background-size: 6rem 6rem;
    content: '';
    /* content-visibility: hidden; */
    left: 0.5rem;
    top: -1rem;

}
/* ... */

